--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <a href="#" class="service">
                 <div class="border card-box">
                     <div class="icon">
-                        <i class="fab fa-wordpress"></i>
+                      <i class="fas fa-mobile-alt"></i>
                     </div>
                     <div class="card-texts text-center">
                       <h3>Mobile Development</h3>
@@ -161,7 +161,7 @@
               <a href="#" class="service">
                   <div class="border card-box">
                       <div class="icon">
-                          <i class="fab fa-wordpress"></i>
+                        <i class="far fa-edit"></i>
                       </div>
                       <div class="card-texts text-center">
                         <h3>Graphic Design</h3>
@@ -176,7 +176,7 @@
                 <a href="#" class="service">
                     <div class="border card-box">
                         <div class="icon">
-                            <i class="fab fa-wordpress"></i>
+                          <i class="far fa-hdd"></i>
                         </div>
                         <div class="card-texts text-center">
                           <h3>Systems Development</h3>
@@ -191,7 +191,7 @@
                   <a href="#" class="service">
                       <div class="border card-box">
                           <div class="icon">
-                              <i class="fab fa-wordpress"></i>
+                            <i class="fas fa-network-wired"></i>
                           </div>
                           <div class="card-texts text-center">
                             <h3>Server systems and Networking</h3>
@@ -206,7 +206,7 @@
                     <a href="#" class="service">
                         <div class="border card-box">
                             <div class="icon">
-                                <i class="fab fa-wordpress"></i>
+                              <i class="fas fa-microchip"></i>
                             </div>
                             <div class="card-texts text-center">
                               <h3>Micro-Controllers and Embedded Systems</h3>
@@ -219,7 +219,7 @@
                       <a href="#" class="service">
                           <div class="border card-box">
                               <div class="icon">
-                                  <i class="fab fa-wordpress"></i>
+                                <i class="fas fa-microchip"></i>
                               </div>
                               <div class="card-texts text-center">
                                 <h3>Micro-Controllers and Embedded Systems</h3>
@@ -234,7 +234,7 @@
                         <a href="#" class="service">
                             <div class="border card-box">
                                 <div class="icon">
-                                    <i class="fab fa-wordpress"></i>
+                                  <i class="fas fa-microchip"></i>
                                 </div>
                                 <div class="card-texts text-center">
                                   <h3>Micro-Controllers and Embedded Systems</h3>
