--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="carousel-item active">
           <img src="img/computer-1869236_640.jpg" class="d-block w-100" alt="...">
           <div class="cover"></div>
-          <div class="carousel-caption d-none d-md-block">
+          <div class="carousel-caption">
             <h5>OneCLick<span>Solutions </span></h5>
             <p>Web and Systems Solutions at your fingertips</p>
             <a href="#" class="started">Getting Started</a>
@@ -75,7 +75,7 @@
         <div class="carousel-item">
             <img src="img/macbook-2617705_1280.jpg" class="d-block w-100" alt="...">
             <div class="cover"></div>
-          <div class="carousel-caption d-none d-md-block">
+          <div class="carousel-caption">
             <h5>OneCLick<span>Solutions </span></h5>
             <p>Responsive Application development for both iOS and Androoid</p>
             <a href="#" class="started">Getting Started</a>
@@ -85,7 +85,7 @@
         <div class="carousel-item">
             <img src="img/software-657188_640.jpg" class="d-block w-100" alt="...">
             <div class="cover"></div>
-          <div class="carousel-caption d-none d-md-block">
+          <div class="carousel-caption">
             <h5>OneCLick<span>Solutions </span></h5>
             <p>Relax and have peace of mind whilst we work on all your designs.</p>
             <a href="#" class="started">Getting Started</a>
@@ -103,16 +103,94 @@
       </a> -->
     </div>
   </div>
-    </heading>
+</section>
+
+<!-- who are we -->
+
+<section id="whoarewe">
+  <div class="container">
+    <div class="heading">
+      <h3>Why Choose Us</h3>
+      <p>Everything we offer is customized to meet your business needs</p>
+    </div>
+    <div class="row">
+      <div class="col-md-8">
+        <div class="text-body">
+          <h3>
+            Who Are We
+          </h3>
+
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae ex at, consequatur error quo placeat magnam possimus beatae repellendus. Voluptatum, cum. Doloribus excepturi, aut asperiores sapiente iure tempore. Fugit, totam.
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint magnam aperiam ratione necessitatibus commodi eos consequatur facere provident dicta inventore, officiis consequuntur dolores. Iste esse dolore hic a laboriosam accusantium?
+          </p>
+          <a href="#">Read More</a>
+        </div>
+      </div>
+      <div class="col-md-4">
+
+        <div class="accordion" id="accordionExample">
+          <div class="card">
+            <div class="card-header" id="headingOne">
+              <h2 class="mb-0">
+                <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  Reliable and Efficient
+                </button>
+              </h2>
+            </div>
+        
+            <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+              <div class="card-body">
+               Relax and feel at ease knowing on the click of a button a solution will be made available
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-header" id="headingTwo">
+              <h2 class="mb-0">
+                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                 Transparent
+                </button>
+              </h2>
+            </div>
+            <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+              <div class="card-body">
+                We involve our clients through out the process of developing their product.
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-header" id="headingThree">
+              <h2 class="mb-0">
+                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                  Affordable Pricing
+                </button>
+              </h2>
+            </div>
+            <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+              <div class="card-body">
+               Our prices are more than friendly they are the least amount for a quality service
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
 
+
+
+
+<!-- enf of who are we -->
 
 <!-- what er provide section -->
 
 <section id="we-offer">
   <div class="container">
     <div class="heading">
-      <h3>What we Offer</h3>
+      <h3>What We Offer</h3>
       <p>Everything we offer is customized to meet your business needs</p>
     </div>
 
