--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div class="cover"></div>
           <div class="carousel-caption">
             <h5>OneCLick<span>Solutions </span></h5>
-            <p>Responsive Application development for both iOS and Androoid</p>
+            <p>Responsive Application development for both iOS and Android</p>
             <a href="#" class="started">Getting Started</a>
             <a href="#" class="service">Our Services</a>
           </div>
@@ -324,6 +324,25 @@
     </div>
   </div>
 </section>
+
+<!-- end of whe do 
+ -->
+
+ <!-- image section -->
+ <section id="fixed-pos">
+
+  <div class="container">
+    <div class="f-wdith">
+      <div class="body-text text-center">
+        <p>Contact Us Now</p>
+        <h4>
+          Just imagine and will make it reality?
+        </h4>
+        <p>125A Alexandra Drive, hatfield <br> Harare</p>
+      </div>
+    </div>
+  </div>
+ </section>
 <script src="js/navbar.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js"></script>
