--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <sect ion id="landing-page">
 
 <!-- begin navbar -->
-    <section id="header" class="fixed-top">
+    <nav id="header" class="fixed-top bg-white">
 
         </div>
         <div class="container">
@@ -50,7 +50,7 @@
             </div>
         </nav>
         </div>
-    </section>
+      </nav>
 <!-- end of navbar  -->
 <!-- carousel section -->
 <div class="bd-example">
