--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
   <div class="container">
     <div class="heading">
       <h3>Why Choose Us</h3>
-      <p>Everything we offer is customized to meet your business needs</p>
+      <p>We are always looking for ways to satisfy your needs</p>
     </div>
     <div class="row">
       <div class="col-md-8">
@@ -343,6 +343,71 @@
     </div>
   </div>
  </section>
+
+
+ <!-- end of that image section-->
+
+
+
+
+
+ <!-- recent wrok section -->
+<section id="recent-work">
+  <div class="container">
+    <div class="heading">
+      <h3>Recent Projects</h3>
+      <p>Check out our previous projects</p>
+    </div>
+    <div class="row">
+      <div class="col-md-8">
+        <div class="one-click">
+            <a href="#" class="select">
+                <img src="img/logo/one-click.png" alt="" >
+            </a>
+        </div>
+      </div>
+      <div class="col-md-4">
+          <div class="one-click2">
+              <a href="#" class="select">
+                  <img src="img/logo/one-click.png" alt="" >
+              </a>
+          </div>
+
+          <div class="one-click3">
+              <a href="#" class="select">
+                  <img src="img/logo/one-click.png" alt="" >
+              </a>
+          </div>
+        </div>
+      
+    </div>
+  </div>
+</section>
+
+
+
+ <!-- end of reecent work -->
+
+
+ <!-- you can contact us -->
+
+
+<section id="contact-us">
+  <div class="container">
+      <div class="heading">
+          <h3>Contact Us</h3>
+          <p>Get in touch with us, we are always ready to connect with you</p>
+        </div>
+    <div class="row">
+
+    </div>
+  </div>
+</section>
+
+
+
+
+ <!-- end of you can contact us -->
 <script src="js/navbar.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js"></script>
