--- a/index.html
+++ b/index.html
@@ -393,15 +393,22 @@
 
 
 <section id="contact-us">
-  <div class="container">
-      <div class="heading">
-          <h3>Contact Us</h3>
-          <p>Get in touch with us, we are always ready to connect with you</p>
-        </div>
-    <div class="row">
+     
 
-    </div>
-  </div>
+        <div class="contact-section">
+            <div class="heading">
+                <h3>Contact Us</h3>
+                <p class="text-white">Get in touch with us, we are always ready to connect with you</p>
+              </div>
+            <form class="contact-form text-center" action="index.html" method="post">
+              <input type="text" class="contact-form-text" placeholder="Your name">
+              <input type="email" class="contact-form-text" placeholder="Your email">
+              <input type="text" class="contact-form-text" placeholder="Your phone">
+              <textarea class="contact-form-text" placeholder="Your message"></textarea>
+              <input type="submit" class="contact-form-btn" value="Send">
+            </form>
+          </div>
+   
 </section>
 
 
