--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                   <a class="nav-link" href="#">Contact Us</a>
            </li>
                     <li class="nav-item">
-                            <a class="nav-link" href="#">Get Quote</a>
+                            <a class="nav-link" href="#"><i class="fab pr-1 fa-whatsapp   "></i> Get Quote</a>
                      </li>
                 </ul>
                
@@ -411,6 +411,68 @@
    
 </section>
 
+<!-- footer section -->
+<footer>
+  <div id="footer">
+    <div class="container">
+      <div class="f-width">
+        <div class="row">
+          <div class="col-md-3">
+            <h3>OneClick<span>Solutions</span></h3>
+            <div class="vertical-line"></div>
+            <p>We deliver IT solutions at your pace. Call us now and discover the hype is real?</p>
+          </div>
+          <div class="col-md-3">
+              <h3>Working <span>hours</span></h3>
+              <div class="vertical-line"></div>
+              <p>
+                <small><i class="far fa-clock "></i>Monday - Friday 8am - 5pm</small> 
+                <br>
+                <small><i class="far fa-clock "></i>Weekends  8am - 5pm</small>
+              </p>
+          </div>
+          <div class="col-md-3">
+              <h3>Contact <span>Us</span></h3>
+              <div class="vertical-line"></div>
+              <p>
+                <small>125A Alexandra Drive, Hatfield, Harare , Zimbabwe </small>
+                <br>
+                <small><i class="far fa-paper-plane"></i>info@oneclicksolutions.com</small>
+                <br>
+                <small><i class="fas fa-phone-alt"></i> +263 77 190 9951 /+263 78 317 2013</small>
+              </p>
+          </div>
+          <div class="col-md-3">
+              <h3>Our <span>Socials</span></h3>
+              <div class="vertical-line"></div>
+              <ul class="socials-footer">
+                <li>
+                  <a href="#"> <i class="fab fa-facebook-square"></i> </a>
+                </li>
+                <li>
+                  <a href="#"> <i class="fab fa-instagram"></i> </a>
+                </li>
+
+                <li>
+                  <a href="#"> <i class="fab fa-twitter-square"></i> </a>
+                </li>
+
+                <li>
+                  <a href="#"> <i class="fab fa-linkedin"></i> </a>
+                </li>
+              </ul>
+          </div>
+        </div>
+      </div>
+    </div> 
+  </div>
+  <div class="Final-footer"><p class="m-0"> Rights Reserved &copy; <a href="www.oneclicksolutions.com">OneCLickSolutions 2019.  </a>  Designed by<a href="www.oneclick.com"> OneClickSolution</a> </p></div>
+</footer>
+
+
+
+
+<!-- end of footer section -->
 
 
 
